炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


//窗口样式----------------------------
/// @defgroup groupWindowStyle 炫彩窗口样式
/// @ingroup macroDefine
/// @{
enum  xc_window_style_
{
	xc_window_style_nothing = 0x00000000,      ///<什么也没有
	xc_window_style_caption = 0x00000001,      ///<top布局,如果指定该属性,默认为绑定标题栏元素
	xc_window_style_border = 0x00000002,      ///<边框,指定默认上下左右布局大小,如果没有指定,那么边框布局大小为0
	xc_window_style_center = 0x00000004,      ///<窗口居中
	xc_window_style_drag_border = 0x00000008,    ///<拖动窗口边框
	xc_window_style_drag_window = 0x00000010,    ///<拖动窗口
	xc_window_style_allow_maxWindow = 0x00000020,   ///允许窗口最大化

													///窗口默认样式
													xc_window_style_default = (xc_window_style_caption | xc_window_style_border | xc_window_style_center | xc_window_style_drag_border | xc_window_style_allow_maxWindow),
													xc_window_style_default2 = (xc_window_style_caption | xc_window_style_border | xc_window_style_drag_border | xc_window_style_allow_maxWindow),

													///模态窗口样式
													xc_window_style_modal = (xc_window_style_caption | xc_window_style_center | xc_window_style_border),
};


///@}

//弹出菜单方向
///@name 弹出菜单方向
///@{
enum  menu_popup_position_
{
	menu_popup_position_left_top = 0,      ///<左上角
	menu_popup_position_left_bottom,     ///<左下角
	menu_popup_position_right_top,       ///<右上角
	menu_popup_position_right_bottom,    ///<右下角
	menu_popup_position_center_left,     ///<左居中
	menu_popup_position_center_top,      ///<上居中
	menu_popup_position_center_right,    ///<右居中
	menu_popup_position_center_bottom,   ///<下居中
};


///@}

///@defgroup GroupPropertyGrid_item_type    属性网格项类型
///@ingroup  macroDefine
///@{
enum  propertyGrid_item_type_
{
	propertyGrid_item_type_text = 0,      ///<默认,字符串类型
	propertyGrid_item_type_edit,        ///<编辑框
	propertyGrid_item_type_edit_color,  ///<颜色选择元素
	propertyGrid_item_type_edit_file,   ///<文件选择编辑框
	propertyGrid_item_type_edit_set,    ///<设置
	propertyGrid_item_type_comboBox,    ///<组合框
	propertyGrid_item_type_group,       ///<组
	propertyGrid_item_type_panel,       ///<面板
};



///@defgroup Group_pane_state_  窗格状态
///@ingroup  macroDefine
///@{
enum pane_state_
{
	pane_state_any = 0,
	pane_state_lock,   ///<锁定
	pane_state_dock,   ///<停靠码头
	pane_state_float,  ///<浮动窗格
};

XC_API void WINAPI XListView_RefreshItem(HELE hEle, int iGroup, int iItem);

XC_API BOOL WINAPI XListView_ExpandGroup(HELE hEle, int iGroup, BOOL bExpand);

XC_API HELE WINAPI XMenuBar_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API int  WINAPI XMenuBar_AddButton(HELE hEle, const wchar_t *pText);     //增加弹出菜单按钮
XC_API void WINAPI XMenuBar_SetButtonHeight(HELE hEle, int height);

XC_API HMENUX WINAPI XMenuBar_GetMenu(HELE hEle, int nIndex);

XC_API BOOL WINAPI XMenuBar_DeleteButton(HELE hEle, int nIndex); //删除菜单项并且销毁,同时该按钮下的弹出菜单也被销毁
XC_API HMENUX WINAPI XMenu_Create();

XC_API void WINAPI XMenu_AddItem(HMENUX hMenu, int nID, const wchar_t *pText, int parentId = XC_ID_ROOT, int nFlags = 0); //添加菜单项
XC_API void WINAPI XMenu_AddItemIcon(HMENUX hMenu, int nID, const wchar_t *pText, int nParentID, HIMAGE hImage, int nFlags = 0);

XC_API void WINAPI XMenu_InsertItem(HMENUX hMenu, int nID, const wchar_t *pText, int nFlags, int insertID);

XC_API void WINAPI XMenu_InsertItemIcon(HMENUX hMenu, int nID, const wchar_t *pText, HIMAGE hIcon, int nFlags, int insertID);

XC_API void WINAPI XMenu_SetAutoDestroy(HMENUX hMenu, BOOL bAuto); //是否自动销毁对象,默认弹出菜单关闭后自动销毁
XC_API void WINAPI XMenu_EnableDrawBackground(HMENUX hMenu, BOOL bEnable); //是否有用户绘制菜单背景
XC_API void WINAPI XMenu_EnableDrawItem(HMENUX hMenu, BOOL bEnable);

XC_API BOOL WINAPI XMenu_Popup(HMENUX hMenu, HWND hParentWnd, int x, int y, HELE hParentEle = NULL, menu_popup_position_ nPosition = menu_popup_position_left_top); //弹出菜单
XC_API void WINAPI XMenu_DestroyMenu(HMENUX hMenu);

XC_API void WINAPI XMenu_CloseMenu(HMENUX hMenu);

XC_API void WINAPI XMenu_SetBkImage(HMENUX hMenu, HIMAGE hImage);

XC_API BOOL WINAPI XMenu_SetItemText(HMENUX hMenu, int nID, const wchar_t *pText); //设置项文本
XC_API BOOL WINAPI XMenu_GetItemText(HMENUX hMenu, int nID, out_ wchar_t *pOut, int nOutLen);

XC_API int  WINAPI XMenu_GetItemTextLength(HMENUX hMenu, int nID);

XC_API BOOL WINAPI XMenu_SetItemIcon(HMENUX hMenu, int nID, HIMAGE hIcon);

XC_API BOOL WINAPI XMenu_SetItemFlags(HMENUX hMenu, int nID, int uFlags);   //设置项属性
XC_API void WINAPI XMenu_SetItemHeight(HMENUX hMenu, int height); //设置菜单项高度
XC_API int  WINAPI XMenu_GetItemHeight(HMENUX hMenu);

XC_API void WINAPI XMenu_SetBorderColor(HMENUX hMenu, COLORREF crColor, BYTE alpha = 255);

XC_API int  WINAPI XMenu_GetLeftWidth(HMENUX hMenu); //获取左侧宽度
XC_API int  WINAPI XMenu_GetLeftSpaceText(HMENUX hMenu);  //获取菜单项文本左间隔
XC_API int  WINAPI XMenu_GetItemCount(HMENUX hMenu); //获取菜单项数量,包含子菜单项
XC_API BOOL WINAPI XMenu_SetItemCheck(HMENUX hMenu, int nID, BOOL bCheck);

XC_API BOOL WINAPI XMenu_IsItemCheck(HMENUX hMenu, int nID);

XC_API HWINDOW WINAPI XModalWnd_Create(int nWidth, int nHeight, const wchar_t *pTitle, HWND hWndParent, int XCStyle = xc_window_style_modal);

XC_API HWINDOW WINAPI XModalWnd_CreateEx(DWORD dwExStyle, const wchar_t* lpClassName, const wchar_t* lpWindowName, DWORD dwStyle, int x, int y, int cx, int cy, HWND hWndParent, int XCStyle = xc_window_style_modal);  //创建窗口
XC_API void WINAPI XModalWnd_EnableAutoClose(HWINDOW hWindow, BOOL bEnable);

XC_API void WINAPI XModalWnd_EnableEscClose(HWINDOW hWindow, BOOL bEnable);

XC_API int  WINAPI XModalWnd_DoModal(HWINDOW hWindow);     //启动模态窗口
XC_API void WINAPI XModalWnd_EndModal(HWINDOW hWindow, int nResult); //终止
XC_API HELE WINAPI XPane_Create(const wchar_t *pName, int nWidth, int nHeight, HWINDOW hFrameWnd = NULL);

XC_API void WINAPI XPane_SetView(HELE hEle, HELE hView);

XC_API BOOL WINAPI XPane_IsShowPane(HELE hEle); //判断窗格是否隐藏
XC_API void WINAPI XPane_SetSize(HELE hEle, int nWidth, int nHeight);

XC_API pane_state_ WINAPI XPane_GetState(HELE hEle);

XC_API void WINAPI XPane_GetViewRect(HELE hEle, out_ RECT* pRect);

XC_API void WINAPI XPane_SetTitle(HELE hEle, wchar_t* pTitle);

XC_API void WINAPI XPane_GetTitle(HELE hEle, out_ wchar_t* pOut, int nOutLen);

XC_API void WINAPI XPane_SetCaptionHeight(HELE hEle, int nHeight);

XC_API int  WINAPI XPane_GetCaptionHeight(HELE hEle);

XC_API void  WINAPI XPane_HidePane(HELE hEle);     //隐藏窗格
XC_API void  WINAPI XPane_ShowPane(HELE hEle);     //隐藏-显示窗格
XC_API void  WINAPI XPane_DockPane(HELE hEle);      //停靠窗格,自动隐藏
XC_API void  WINAPI XPane_LockPane(HELE hEle);      //锁定窗格
XC_API void  WINAPI XPane_FloatPane(HELE hEle);     //弹出窗格,当在码头上
XC_API BOOL WINAPI XFloatWnd_EnableCaptionContent(HWINDOW hWindow, BOOL bEnable);

XC_API HXCGUI WINAPI XFloatWnd_GetCaptionLayout(HWINDOW hWindow);

XC_API HXCGUI WINAPI XFloatWnd_GetCaptionShapeText(HWINDOW hWindow);

XC_API HELE   WINAPI XFloatWnd_GetCaptionButtonClose(HWINDOW hWindow);

XC_API void  WINAPI XFloatWnd_SetTitle(HWINDOW hWindow, const wchar_t*  pTitle);

XC_API void  WINAPI XFloatWnd_GetTitle(HWINDOW hWindow, out_ wchar_t*  pOut, int nOutLen);

XC_API HELE WINAPI XProgBar_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API void WINAPI XProgBar_SetRange(HELE hEle, int range);

XC_API int  WINAPI XProgBar_GetRange(HELE hEle);

XC_API void WINAPI XProgBar_SetSpaceTwo(HELE hEle, int leftSize, int rightSize);

XC_API void WINAPI XProgBar_SetPos(HELE hEle, int pos);

XC_API int  WINAPI XProgBar_GetPos(HELE hEle);

XC_API void WINAPI XProgBar_SetHorizon(HELE hEle, BOOL bHorizon);

XC_API void WINAPI XProgBar_SetImageLoad(HELE hEle, HIMAGE hImage);

XC_API HELE WINAPI XPGrid_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API int  WINAPI XPGrid_AddItem(HELE hEle, const wchar_t *pName, propertyGrid_item_type_ nType, int nParentID = XC_ID_ROOT); //添加项
XC_API int  WINAPI XPGrid_AddItemString(HELE hEle, const wchar_t *pName, const wchar_t *pValue, int nParentID = XC_ID_ROOT);

XC_API void WINAPI XPGrid_DeleteAll(HELE hEle);

XC_API HELE WINAPI XPGrid_GetItemHELE(HELE hEle, int nItemID);

XC_API void WINAPI XPGrid_SetWidth(HELE hEle, int nWidth);

XC_API BOOL WINAPI XPGrid_SetItemValue(HELE hEle, int nItemID, const wchar_t* pValue);

XC_API BOOL WINAPI XPGrid_SetItemValueInt(HELE hEle, int nItemID, int nValue);

XC_API BOOL WINAPI XPGrid_SetItemData(HELE hEle, int nItemID, int nUserData);

XC_API int  WINAPI XPGrid_GetItemData(HELE hEle, int nItemID);

XC_API const wchar_t* WINAPI XPGrid_GetItemValue(HELE hEle, int nItemID);

XC_API int  WINAPI XPGrid_HitTest(HELE hEle, POINT *pPt, BOOL *pbExpandButton);

XC_API int  WINAPI XPGrid_HitTestOffset(HELE hEle, POINT *pPt, BOOL *pbExpandButton);

XC_API BOOL WINAPI XPGrid_ExpandItem(HELE hEle, int nItemID, BOOL bExpand);//展开项
XC_API int  WINAPI XPGrid_GetSelItem(HELE hEle);

XC_API BOOL WINAPI XPGrid_SetSelItem(HELE hEle, int nItemID);

XC_API void WINAPI XPGrid_SetDrawItemBkFlags(HELE hEle, int nFlags);
XC_API HELE WINAPI XRichEditColor_Create(int x, int y, int cx, int cy, HXCGUI hParent);

XC_API void WINAPI XRichEditColor_SetColor(HELE hEle, COLORREF color);//设置颜色
XC_API COLORREF WINAPI XRichEditColor_GetColor(HELE hEle); //获取颜色RGB值
XC_API HELE WINAPI XRichEditSet_Create(int x, int y, int cx, int cy, HXCGUI hParent);

XC_API HELE WINAPI XRichEditFile_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API void WINAPI XRichEditFile_SetOpenFileType(HELE hEle, const wchar_t *pType); //设置打开文件类型
XC_API void WINAPI XRichEditFile_SetDefaultFile(HELE hEle, const wchar_t *pFile); //设置默认目录文件
XC_API void WINAPI XRichEditFile_SetRelativeDir(HELE hEle, const wchar_t *pDir); //TODO:设置相对路径
XC_API HELE WINAPI XRichEditFolder_Create(int x, int y, int cx, int cy, HXCGUI hParent);

XC_API void WINAPI XRichEditFolder_SetDefaultDir(HELE hEle, const wchar_t* pDir);  //设置默认目录
XC_API HELE WINAPI XRichEdit_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API void WINAPI XRichEdit_InsertString(HELE hEle, const wchar_t *pString, HFONTX hFont = NULL);

XC_API BOOL WINAPI XRichEdit_InsertImage(HELE hEle, HIMAGE hImage, const wchar_t *pImagePath);

XC_API BOOL WINAPI XRichEdit_InsertGif(HELE hEle, HIMAGE hImage, const wchar_t *pImagePath);

XC_API void WINAPI XRichEdit_InsertStringEx(HELE hEle, int iRow, int iColumn, const wchar_t *pString, HFONTX hFont = NULL);

XC_API BOOL WINAPI XRichEdit_InsertImageEx(HELE hEle, int iRow, int iColumn, HIMAGE hImage, const wchar_t *pImagePath);

XC_API BOOL WINAPI XRichEdit_InsertGifEx(HELE hEle, int iRow, int iColumn, HIMAGE hImage, const wchar_t *pImagePath);

XC_API void WINAPI XRichEdit_EnableReadOnly(HELE hEle, BOOL bEnable);

XC_API void WINAPI XRichEdit_EnableMultiLine(HELE hEle, BOOL bEnable);

XC_API void WINAPI XRichEdit_EnablePassword(HELE hEle, BOOL bEnable);

XC_API void WINAPI XRichEdit_EnableEvent_XE_RICHEDIT_CHANGE(HELE hEle, BOOL bEnable);

XC_API void WINAPI XRichEdit_EnableAutoWrap(HELE hEle, BOOL bEnable);

XC_API void WINAPI XRichEdit_EnableAutoSelAll(HELE hEle, BOOL bEnable);

XC_API void WINAPI XRichEdit_EnableVerticalCenter(HELE hEle, BOOL bEnable);