炫彩编程助手/Data/DemoMgr/Delphi/Lib/XCGUI.pas

procedure XListView_RefreshItem (hEle:Integer;iGroup:Integer;iItem:Integer);stdcall;far; external 'xcgui.dll';
function XListView_ExpandGroup (hEle:Integer;iGroup:Integer;bExpand:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XMenuBar_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMenuBar_AddButton (hEle:Integer;pText:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
procedure XMenuBar_SetButtonHeight (hEle:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
function XMenuBar_GetMenu (hEle:Integer;nIndex:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMenuBar_DeleteButton (hEle:Integer;nIndex:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XMenu_Create () : Integer;stdcall;far; external 'xcgui.dll';
procedure XMenu_AddItem (hMenu:Integer;nID:Integer;pText:PWideChar;parentId:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
procedure XMenu_AddItemIcon (hMenu:Integer;nID:Integer;pText:PWideChar;nParentID:Integer;hImage:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
procedure XMenu_InsertItem (hMenu:Integer;nID:Integer;pText:PWideChar;nFlags:Integer;insertID:Integer);stdcall;far; external 'xcgui.dll';
procedure XMenu_InsertItemIcon (hMenu:Integer;nID:Integer;pText:PWideChar;hIcon:Integer;nFlags:Integer;insertID:Integer);stdcall;far; external 'xcgui.dll';
procedure XMenu_SetAutoDestroy (hMenu:Integer;bAuto:LongBool);stdcall;far; external 'xcgui.dll';
procedure XMenu_EnableDrawBackground (hMenu:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XMenu_EnableDrawItem (hMenu:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XMenu_Popup (hMenu:Integer;hParentWnd:Integer;x:Integer;y:Integer;hParentEle:Integer;nPosition:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XMenu_DestroyMenu (hMenu:Integer);stdcall;far; external 'xcgui.dll';
procedure XMenu_CloseMenu (hMenu:Integer);stdcall;far; external 'xcgui.dll';
procedure XMenu_SetBkImage (hMenu:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XMenu_SetItemText (hMenu:Integer;nID:Integer;pText:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XMenu_GetItemText (hMenu:Integer;nID:Integer;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XMenu_GetItemTextLength (hMenu:Integer;nID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMenu_SetItemIcon (hMenu:Integer;nID:Integer;hIcon:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XMenu_SetItemFlags (hMenu:Integer;nID:Integer;uFlags:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XMenu_SetItemHeight (hMenu:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
function XMenu_GetItemHeight (hMenu:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XMenu_SetBorderColor (hMenu:Integer;crColor:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XMenu_GetLeftWidth (hMenu:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMenu_GetLeftSpaceText (hMenu:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMenu_GetItemCount (hMenu:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMenu_SetItemCheck (hMenu:Integer;nID:Integer;bCheck:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XMenu_IsItemCheck (hMenu:Integer;nID:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XModalWnd_Create (nWidth:Integer;nHeight:Integer;pTitle:PWideChar;hWndParent:Integer;XCStyle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XModalWnd_CreateEx (dwExStyle:Integer;lpClassName:PWideChar;lpWindowName:PWideChar;dwStyle:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;hWndParent:Integer;XCStyle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XModalWnd_EnableAutoClose (hWindow:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XModalWnd_EnableEscClose (hWindow:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XModalWnd_DoModal (hWindow:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XModalWnd_EndModal (hWindow:Integer;nResult:Integer);stdcall;far; external 'xcgui.dll';
function XPane_Create (pName:PWideChar;nWidth:Integer;nHeight:Integer;hFrameWnd:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XPane_SetView (hEle:Integer;hView:Integer);stdcall;far; external 'xcgui.dll';
function XPane_IsShowPane (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XPane_SetSize (hEle:Integer;nWidth:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_GetState (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_GetViewRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XPane_SetTitle (hEle:Integer;pTitle:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XPane_GetTitle (hEle:Integer;pOut:PWideChar;nOutLen:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_SetCaptionHeight (hEle:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
function XPane_GetCaptionHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XPane_HidePane (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_ShowPane (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_DockPane (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_LockPane (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XPane_FloatPane (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XFloatWnd_EnableCaptionContent (hWindow:Integer;bEnable:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XFloatWnd_GetCaptionLayout (hWindow:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFloatWnd_GetCaptionShapeText (hWindow:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFloatWnd_GetCaptionButtonClose (hWindow:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFloatWnd_SetTitle (hWindow:Integer;pTitle:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XFloatWnd_GetTitle (hWindow:Integer;pOut:PWideChar;nOutLen:Integer);stdcall;far; external 'xcgui.dll';
function XProgBar_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XProgBar_SetRange (hEle:Integer;range:Integer);stdcall;far; external 'xcgui.dll';
function XProgBar_GetRange (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XProgBar_SetSpaceTwo (hEle:Integer;leftSize:Integer;rightSize:Integer);stdcall;far; external 'xcgui.dll';
procedure XProgBar_SetPos (hEle:Integer;pos:Integer);stdcall;far; external 'xcgui.dll';
function XProgBar_GetPos (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XProgBar_SetHorizon (hEle:Integer;bHorizon:LongBool);stdcall;far; external 'xcgui.dll';
procedure XProgBar_SetImageLoad (hEle:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XPGrid_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XPGrid_AddItem (hEle:Integer;pName:PWideChar;nType:Integer;nParentID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XPGrid_AddItemString (hEle:Integer;pName:PWideChar;pValue:PWideChar;nParentID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XPGrid_DeleteAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XPGrid_GetItemHELE (hEle:Integer;nItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XPGrid_SetWidth (hEle:Integer;nWidth:Integer);stdcall;far; external 'xcgui.dll';
function XPGrid_SetItemValue (hEle:Integer;nItemID:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XPGrid_SetItemValueInt (hEle:Integer;nItemID:Integer;nValue:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XPGrid_SetItemData (hEle:Integer;nItemID:Integer;nUserData:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XPGrid_GetItemData (hEle:Integer;nItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XPGrid_GetItemValue (hEle:Integer;nItemID:Integer) : PWideChar;stdcall;far; external 'xcgui.dll';
function XPGrid_HitTest (hEle:Integer;pPt:TPOINT;pbExpandButton:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XPGrid_HitTestOffset (hEle:Integer;pPt:TPOINT;pbExpandButton:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XPGrid_ExpandItem (hEle:Integer;nItemID:Integer;bExpand:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XPGrid_GetSelItem (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XPGrid_SetSelItem (hEle:Integer;nItemID:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XPGrid_SetDrawItemBkFlags (hEle:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
function XRichEditColor_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEditColor_SetColor (hEle:Integer;color:Integer);stdcall;far; external 'xcgui.dll';
function XRichEditColor_GetColor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEditSet_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEditFile_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEditFile_SetOpenFileType (hEle:Integer;pType:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XRichEditFile_SetDefaultFile (hEle:Integer;pFile:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XRichEditFile_SetRelativeDir (hEle:Integer;pDir:PWideChar);stdcall;far; external 'xcgui.dll';
function XRichEditFolder_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEditFolder_SetDefaultDir (hEle:Integer;pDir:PWideChar);stdcall;far; external 'xcgui.dll';
function XRichEdit_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_InsertString (hEle:Integer;pString:PWideChar;hFont:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertImage (hEle:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertGif (hEle:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_InsertStringEx (hEle:Integer;iRow:Integer;iColumn:Integer;pString:PWideChar;hFont:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertImageEx (hEle:Integer;iRow:Integer;iColumn:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertGifEx (hEle:Integer;iRow:Integer;iColumn:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableReadOnly (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableMultiLine (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnablePassword (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableEvent_XE_RICHEDIT_CHANGE (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableAutoWrap (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableAutoSelAll (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableVerticalCenter (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
